# controle-estoque-agro

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 02406df23f45_criar_tabela_ncm_regra.py  7606e3e0f60a_criar_tabelas_iniciais.py  962085a78481_add_default_uuid_estoque.py  c515d1d6f17c_add_estoque_minimo_produto.py  d900a0189f55_criar_tabela_nfe_importada.py
app/api/: auth.py  dependencies.py
app/api/routers/: auth.py  estoque.py  fornecedores.py  importacao.py  movimentacoes.py  ncm_regras.py  produtos.py  relatorios.py  usuarios.py
app/api/schemas/: estoque.py  fornecedor.py  movimentacao.py  produto.py  usuario.py
app/application/use_cases/: __init__.py  cadastrar_fornecedor.py  cadastrar_produto.py  cadastrar_usuario.py  consultar_estoque.py  (+15 more)
frontend/: main.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/services/: api.py  auth.py
frontend/views/: ajuste.py  cadastrar_produto.py  configuracoes.py  entrada_manual.py  estoque.py  fornecedores.py  historico.py  importar_nfe.py  inicio.py  produtos.py  relatorios.py  saida.py
tests/: conftest.py  test_cadastrar_produto.py  test_cadastrar_usuario.py  test_importar_xml_nfe.py  test_integracao_movimentacoes.py  test_integracao_produtos.py  test_registrar_movimentacao.py
tests/fakes/: estoque_repository_fake.py  fornecedor_repository_fake.py  movimentacao_repository_fake.py  nfe_importada_repository_fake.py  produto_repository_fake.py  usuario_repository_fake.py
(+30 files in other folders)
